# typerdrive

./: 404.html  CHANGELOG.md  Makefile  README.md  TODO.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
demo/: index.html
dev-guide/: index.html
docs/: mkdocs.yaml
docs/source/: demo.md  dev-guide.md  index.md  quickstart.md
docs/source/features/: cache.md  client.md  exceptions.md  files.md  settings.md
docs/source/reference/: files.md
examples/cache/: attach.py  commands.py
examples/client/: attach.py
examples/files/: attach.py  commands.py
examples/logging/: attach.py
examples/settings/: attach.py
features/cache/: index.html
features/client/: index.html
features/exceptions/: index.html
features/files/: index.html
features/logging/: index.html
features/settings/: index.html
quickstart/: index.html
reference/: index.html
reference/base_modules/: index.html
reference/cache/: index.html
reference/client/: index.html
reference/files/: index.html
reference/logging/: index.html
reference/settings/: index.html
search/: search_index.json
src/typerdrive/: __init__.py  config.py  constants.py  context.py  dirs.py  format.py  handle_errors.py  model_parser.py
src/typerdrive/cache/: attach.py  commands.py  manager.py  models.py  typed_cache.py
src/typerdrive/client/: attach.py
src/typerdrive/files/: attach.py  commands.py  exceptions.py  manager.py
src/typerdrive/logging/: attach.py  commands.py  manager.py
src/typerdrive/settings/: attach.py  commands.py  (+1 more)
src/typerdrive_benchmarks/: cli_baseline.py  cli_full.py  cli_settings.py
src/typerdrive_demo/: attach_cache.py  attach_client.py  attach_files.py  attach_settings.py  cache_commands.py  files_commands.py  handle_errors.py  helpers.py  main.py
tests/: helpers.py  test_config.py  test_format.py  test_handle_errors.py
tests/benchmarks/: test_startup.py
tests/cache/: test_attach.py  test_commands.py  test_manager.py
tests/client/: test_attach.py  test_base.py
tests/files/: conftest.py
tests/integration/: conftest.py
tests/settings/: conftest.py  test_attach.py  test_commands.py  test_manager.py
tests/unit/: test_config.py  test_format.py  test_handle_errors.py
(+17 files in other folders)
