[project]
name = "typerdrive"
version = "0.9.3"
description = "Develop API-Connected Typer Apps at Lightspeed"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE.md"]

requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6",
    "httpx>=0.28",
    "humanize>=4.12",
    "inflection>=0.5",
    "loguru>=0.7",
    "py-buzz>=8.0",
    "pydantic>=2.11",
    "pyperclip>=1.9",
    "snick>=3.0",
    "typer>=0.15",
    "typer-repyt>=0.9.1",
    "rich>=14.0",
    "xdg-base-dirs>=6.0.2",
]


[project.urls]
homepage = "https://github.com/dusktreader/typerdrive"
source = "https://github.com/dusktreader/typerdrive"
changelog = "https://github.com/dusktreader/typerdrive/blob/main/CHANGELOG.md"

[project.scripts]
typerdrive-demo = "typerdrive_demo.main:main[cli]"


[dependency-groups]
dev = [
    "auto-name-enum>=4.1.0",
    "debugpy>=1.8",
    "ipython>=8.18",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
    "pyclean>=3.1",
    "pygments>=2.19",
    "pytest>=8.3",
    "pytest-benchmark>=5.0",
    "pytest-bdd>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-pretty>=1.2",
    "pytest-random-order>=1.1",
    "respx>=0.22.0",
    "ruff>=0.11",
    "ty>=0.0",
    "typos>=1.31",
    "superfences-ps1>=0.1.0",
]


[tool.uv]
package = true


[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=src/typerdrive",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--cov-report=xml:.coverage.xml",
    "--junitxml=.junit.xml",
    "--override-ini=junit_family=legacy",
    "-m", "not benchmark",
]
markers = [
    "benchmark: startup/performance benchmarks (excluded from normal test runs)",
]


[tool.pytest-benchmark]
disable_gc = true
min_rounds = 10
warmup = true
warmup_iterations = 2


[tool.ruff]
line-length = 120
src = ["src/typerdrive", "tests", "src/typerdrive_demo", "src/typerdrive_benchmarks", "examples"]


[tool.ruff.format]
docstring-code-format = true


[tool.typos.default]
extend-ignore-identifiers-re = []


[build-system]
requires = ["uv-build>=0.1.0"]
build-backend = "uv_build"

